Working Areas Implementation
